--- a/Font Smoothing Bug Text/Base.lproj/MainMenu.xib
+++ b/Font Smoothing Bug Text/Base.lproj/MainMenu.xib
@@ -13,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Font_Smoothing_Bug_Text" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Font_Smoothing_WebKit_Bug" customModuleProvider="target">
             <connections>
                 <outlet property="textView" destination="WMF-az-n0M" id="poO-Vg-egZ"/>
                 <outlet property="webView" destination="zlL-B0-mF1" id="Xm1-uA-eQg"/>
@@ -23,11 +23,11 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="Font Smoothing Bug Text" id="1Xt-HY-uBw">
+                <menuItem title="Font Smoothing WebKit Bug" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Font Smoothing Bug Text" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="Font Smoothing WebKit Bug" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About Font Smoothing Bug Text" id="5kV-Vb-QxS">
+                            <menuItem title="About Font Smoothing WebKit Bug" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -41,7 +41,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide Font Smoothing Bug Text" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide Font Smoothing WebKit Bug" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -59,7 +59,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit Font Smoothing Bug Text" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit Font Smoothing WebKit Bug" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -672,7 +672,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="Font Smoothing Bug Text Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="Font Smoothing WebKit Bug Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
@@ -683,23 +683,23 @@
             </items>
             <point key="canvasLocation" x="200" y="121"/>
         </menu>
-        <window title="Font Smoothing Bug Text" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="Font Smoothing WebKit Bug" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="360"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="875"/>
-            <view key="contentView" misplaced="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="485" height="370"/>
+            <view key="contentView" id="EiT-Mj-1SZ">
+                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jrp-qb-R6i">
-                        <rect key="frame" x="5" y="5" width="498" height="360"/>
+                        <rect key="frame" x="5" y="5" width="470" height="350"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gyg-zp-Q8K">
-                                <rect key="frame" x="0.0" y="0.0" width="245" height="360"/>
+                                <rect key="frame" x="0.0" y="0.0" width="231" height="350"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1SF-MC-mBt">
-                                        <rect key="frame" x="-2" y="344" width="77" height="16"/>
+                                        <rect key="frame" x="-2" y="334" width="77" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="NSTextView" id="885-dc-1jS">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -707,17 +707,17 @@
                                         </textFieldCell>
                                     </textField>
                                     <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhE-re-dc9">
-                                        <rect key="frame" x="0.0" y="0.0" width="245" height="340"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="231" height="330"/>
                                         <clipView key="contentView" drawsBackground="NO" id="Y9Y-3v-0Iu">
-                                            <rect key="frame" x="0.0" y="0.0" width="245" height="340"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="231" height="330"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="WMF-az-n0M">
-                                                    <rect key="frame" x="0.0" y="0.0" width="245" height="340"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="231" height="330"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    <size key="minSize" width="245" height="340"/>
+                                                    <size key="minSize" width="231" height="330"/>
                                                     <size key="maxSize" width="282" height="10000000"/>
                                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 </textView>
@@ -728,7 +728,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="gPz-bK-EgA">
-                                            <rect key="frame" x="229" y="0.0" width="16" height="340"/>
+                                            <rect key="frame" x="215" y="0.0" width="16" height="330"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
@@ -743,10 +743,10 @@
                                 </customSpacing>
                             </stackView>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q0f-Uw-VFs">
-                                <rect key="frame" x="253" y="0.0" width="245" height="360"/>
+                                <rect key="frame" x="239" y="0.0" width="231" height="350"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bws-SH-OSr">
-                                        <rect key="frame" x="-2" y="344" width="81" height="16"/>
+                                        <rect key="frame" x="-2" y="334" width="81" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="WKWebView" id="PAG-MT-5Xv">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -754,7 +754,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zlL-B0-mF1">
-                                        <rect key="frame" x="0.0" y="0.0" width="222" height="340"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="231" height="330"/>
                                         <wkWebViewConfiguration key="configuration">
                                             <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                             <wkPreferences key="preferences"/>
